src/test/deca/syntax/valid/inst/test_inst_substract.deca
// Description:
//    test de programme syntaxiquement correct
//
// Resultats:
//    Hello World!
//    
//
// Historique:
//    cree le 01/01/2024

{
        int i = 10 - 5;
}
