src/test/deca/syntax/invalid/decl_field/test_decl_field_with_private_attr.deca
// Description:
//    Programme minimaliste creant une classe
//
// Resultats:
// no viable alternative at input 'privateinta'
// Historique:
//    cree le 01/01/2024

class A {   
    private int a;
}
